# autocut

./: pyproject.toml
autocut/: main.py  whisper_model.py
